@@ -36,6 +36,7 @@ dependencies {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
+	shadow("blue.endless:jankson:1.1.+")
 	implementation "blue.endless:jankson:1.1.+"
 
 	compile "com.google.code.findbugs:jsr305:3.0.2"
@@ -77,7 +78,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 }
 
 shadowJar {
-	relocate("blue.endless.jankson", "${group}.shadowed.blue.endless.jankson")
+	relocate("blue.endless.jankson", "${project.group}.shadowed.blue.endless.jankson")
 
 	configurations = [project.configurations.shadow]
 	classifier "shadow"
@@ -89,7 +90,7 @@ remapJar {
 }
 
 jar {
-	from "LICENSE.md"
+	from "LICENSE"
 }
 
 curseforge {
