@@ -16,7 +16,7 @@ release_type = release
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.29.3+1.16
-fireplacelib_version=2.0.4+1.16.5
+fireplacelib_version=2.0.6+1.16.5
 clothconfig_version=4.8.3
 modmenu_version=1.14.13+build.19
 gunpowder_version=0.3.4+1.16.4
