@@ -11,3 +11,4 @@ Updated to 1.16.X
 Fixes/Internal Changes:
 Performance improvements for saving and loading account data
 Performance improvements for determining when basic income should be given
+Fixed a typo in the message that says you received money
